--- a/README.org
+++ b/README.org
@@ -3,6 +3,7 @@
 ** pytyping
 pytyping is a typing game written in Python.
 
+- Images
+[[https://raw.githubusercontent.com/taiseiyo/manage-pytyping/master/images/pytyping.png][pytyping Image]]
 
-[[]]
 ** 
