--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 * manage-pytyping
-** pytyping
+** What is pytyping?
 pytyping is a typing game written in Python.
 ** Images
 [[https://raw.githubusercontent.com/taiseiyo/manage-pytyping/master/images/pytyping.png]]
