--- a/README.org
+++ b/README.org
@@ -9,3 +9,8 @@ pytyping is a typing game written in Python.
 A tool for recording each pytyping score created by React 
 ** Images
 [[https://raw.githubusercontent.com/taiseiyo/manage-pytyping/master/images/score.png]]
+
+** URL
+It is published using the hosting function of firebase
+
+[[URL is here][]]
